# falcon-ratelimit

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  travislint.py
falconratelimit/: __init__.py  ratelimit.py
tests/: __init__.py  test_ratelimit.py
