[metadata]
name = falcon-ratelimit
version = 1.0
description-file = README.md
author = Piotr Maślanka
author_email = piotr.maslanka@henrietta.com.pl
description = Rate limiter for Falcon framework
url = https://github.com/piotrmaslanka/falcon-ratelimit

classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Topic :: Internet :: WWW/HTTP :: Session

[pycodestyle]
max-line-length=80

[bdist_wheel]
universal=1

[nosetests]
verbosity=2
with-coverage=1
detailed-errors=1

[isort]
add_imports =
    from __future__ import absolute_import
    from __future__ import division
    from __future__ import print_function
    from __future__ import unicode_literals